--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,9 @@
 	<classpathentry kind="var" path="swt"/>
 	<classpathentry kind="var" path="SQL"/>
 	<classpathentry kind="var" path="xx"/>
+	<classpathentry kind="lib" path="/home/user7/Desktop/db/jars/c3p0-0.9.5-pre8.jar"/>
+	<classpathentry kind="lib" path="/home/user7/Desktop/db/jars/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="/home/user7/Desktop/db/jars/mysql-connector-java-5.1.30-bin.jar"/>
+	<classpathentry kind="lib" path="/home/user7/Desktop/db/jars/swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
