--- a/.classpath
+++ b/.classpath
@@ -2,12 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/user7/Desktop/db/jars/c3p0-0.9.5-pre8.jar"/>
-	<classpathentry kind="lib" path="/home/user7/Desktop/db/jars/commons-lang-2.6.jar"/>
-	<classpathentry kind="lib" path="/home/user7/Desktop/db/jars/mchange-commons-java-0.2.7.jar"/>
-	<classpathentry kind="lib" path="/home/user7/Desktop/db/jars/mysql-connector-java-5.1.30-bin.jar"/>
-	<classpathentry kind="lib" path="/home/user7/Desktop/db/jars/swt.jar" sourcepath="/home/user7/Desktop/db/jars/swt-4.3-gtk-linux-x86/src.zip"/>
-	<classpathentry kind="lib" path="/home/user7/Desktop/db/jars/swt-4.3-gtk-linux-x86.zip"/>
+	<classpathentry kind="lib" path="c3p0-0.9.5-pre8.jar"/>
+	<classpathentry kind="lib" path="commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="mchange-commons-java-0.2.7.jar"/>
+	<classpathentry kind="lib" path="mysql-connector-java-5.1.30-bin.jar"/>
 	<classpathentry kind="lib" path="swing2swt.jar"/>
+	<classpathentry kind="lib" path="swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
